# meshtastic-ble-gateway

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  mbg.service  runbook-mha-ble-lecup-planb.md  runbook-mha-ble-supervision-timeout.md
deploy/bluez-buster/: README.md  build-bluez-deb.sh
deploy/buster-offline/: README.md  build-buster-offline.sh
docs/: api.md  architecture.md  battery-tiers.md  configuration.md  installation.md  monitoring.md  provision.md  resilience.md  tested-environments.md  traceroute.md  troubleshooting.md
poc/: README.md  ble_mqtt_proxy.py  docker-compose.yml
poc/mosquitto/: mosquitto.conf
src/mbg/: __init__.py  __main__.py  api.py  (+19 more)
tests/: fakes.py  hang_probe.py  test_api.py  test_api_hops.py  test_api_packets.py  test_api_traceroute.py  test_config.py  test_config_traceroute.py  test_control.py  test_deploy_service.py  test_link_tuner.py  test_main.py  test_meshtastic_patch.py  test_metrics.py  test_metrics_packets.py  test_mqtt_publisher.py  test_node.py  test_node_hops.py  test_node_packets.py  test_node_traceroute.py  test_process_backend.py  test_provision.py  test_proxy.py  test_runner.py  test_session.py  test_session_packets.py  test_session_traceroute.py  test_storage.py  test_storage_hops.py  test_storage_packets.py  test_storage_traceroute.py  test_supervisor.py  test_supervisor_reconcile.py  test_systemd_notify.py  test_tiers.py  test_traceroute.py  test_traceroute_scheduler.py  test_worker.py  test_worker_traceroute.py
(+3 files in other folders)
