[project]
name = "meshtastic-ble-gateway"
version = "0.9.0"
description = "Pont BLE → MQTT pour nodes Meshtastic BT-only, à destination de MeshForge"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
authors = [{ name = "Mickaël Hoareau" }]
dependencies = [
    "meshtastic>=2.3",
    "paho-mqtt>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=mbg --cov-branch --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
# Le PoC (spike matériel BLE) est hors périmètre de couverture — testé à la main.
omit = ["poc/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    # Stubs de méthodes Protocol (corps `...` de typage, jamais exécutés).
    '\.\.\.\s*$',
]
